--- a/index.html
+++ b/index.html
@@ -4,9 +4,232 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
   </head>
+
   <body>
+    <header>
+       <img src="" alt="Логотип сайта">
+     <nav>
+       <ul>
+          <li>
+            <a href="">Войти</a>
+          </li>
+          <li>
+            <a href="">Сравнить</a>
+          </li>
+          <li>
+            <a href="">Корзина</a>
+          </li>
+       </ul>
+       <ul>
+          <li>
+            <a href="catalog.html">Каталог Товаров</a>
+          </li>
+          <li>
+            <a href="delivery.html">Доставка</a>
+          </li>
+          <li>
+            <a href="garanty.html">Гарантия</a>
+          </li>
+          <li>
+            <a href="contakts.html">Контакты</a>
+          </li>
+        </ul>
+     </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+   <main>
+       <h1 class="visually-hidden">Сайт "Девайс"</h1>
 
+     <section>
+       <!--Н настроить переключение слайдера-->
+       <h2 class="visually-hidden">Слайдер с товарами</h2>
+        <img src="" alt="Изображение квадрокоптера">
+         <br>
+          <strong>Порхает как бабочка, жалит как пчела!</strong>
+           <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a href="catalog.html/categories/quadcopters">Подробнее</a>
+         <dl>
+           <dd>800 м</dd>
+           <dt>Дальность полета</dt>
+           <dd>50 м</dd>
+           <dt>Радиус поражения</dt>
+         </dl>
+        <img src="" alt="Изображение фитнес-браслета">
+         <br>
+          <strong>Худеем правильно!</strong>
+           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a href="catalog.html/categories/fitness">Подробнее</a>
+          <dl>
+           <dd>48 часов</dd>
+           <dt>Без подзарядки</dt>
+          </dl>
+        <img src="" alt="Изображение селфи-палки">
+         <br>
+          <strong>Делай селфи, как Бен Стиллер! </strong>
+           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+            <a href="catalog.html/categories/monopods">Подробнее</a>
+          <dl>
+           <dd>8,5 м</dd>
+           <dt>Длина палки</dt>
+           <dd>5 кг</dd>
+           <dt>Вес палки</dt>
+           <dd>Карбон</dd>
+           <dt>Материал</dt>
+          </dl>
+     </section>
+     <section>
+       <h2 class="visually-hidden">Категории товаров</h2>
+       <ul>
+           <img src="" alt="Изображение для категории Вируальная реальность">
+          <p>
+            <li>
+              <a href="catalog.html/categories/virtual-reality">Виртуальная реальность</a>
+            </li>
+          </p>
+           <img src="" alt="Изображение для категории Моноподы для селфи">
+          <p>
+            <li>
+              <a href="catalog.html/categories.html/monopods">Моноподы</a>
+            </li>
+          </p>
+           <img src="" alt="Изображение для категории Экшн-камеры">
+          <p>
+            <li>
+              <a href="catalog.html/categories.html/e-cameras">"Экшн-камеры"</a>
+            </li>
+          </p>
+           <img src="" alt="Изображение для категории Фитнес-браслеты">
+          <p>
+           <li>
+              <a href="catalog.html/categories.html/fitness">Фитнес-браслеты</a>
+           </li>
+          </p>
+           <img src="" alt="Изображение для категории Умные часы">
+          <p>
+            <li>
+              <a href="catalog.html/categories.html/smart-watch">Умные часы</a>
+            </li>
+          </p>
+           <img src="" alt="Изображение для категории Квадрокоптеры">
+          <p>
+            <li>
+              <a href="catalog.html/categories.html/quadcopters">Квадрокоптеры</a>
+           </li>
+          </p>
+       </ul>
+     </section>
+     <section>
+       <!--Слева меню должно переключаться-->
+       <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul>
+              <img src="" alt="Изображение для Доставка">
+            <li>
+              <h3>Доставка</h3>
+               <p>Мы с удовольствием доставим ваш товар прямо
+                к вашему подъезду совершенно бесплатно! Ведь
+                мы неплохо заработаем, поднимая его на ваш этаж.
+               </p>
+            </li>
+              <img src="" alt="Изображение для Гарантия">
+              <li>
+               <h3>Гарантия</h3>
+                <p>Если из-за возгорания купленного у нас товара у вас
+                 сгорит дом — не переживайте, мы выдадим вам новый.
+                 Товар, не дом, конечно же.
+                </p>
+            </li>
+              <img src="" alt="Изображение для Кредит">
+              <li>
+               <h3>Кредит</h3>
+                <p>Залезть в долговую яму стало проще! Кредитные 
+                 консультанты подберут для вас наиболее выгодные
+                 условия кредита. Выгодные для банка, разумеется.
+                </p>
+            </li>
+           </ul>
+     </section>
+     <section>
+      <h2 class="visually-hidden">Полезная информация</h2>
+       <a href="delivery.html">Доставим редкий товар под заказ</a>
+      <h3>О нас</h3>
+      <p>Огромный выбор гаджетов не оставит равнодушным гика, 
+       который есть в каждом из нас.
+      </p>
+      <p>Мы можем доставить ваш товар в самые отдалённые уголки 
+       России транспортными компаниями:
+      </p>
+      <ul>
+        <li>Меловые линии</li>
+        <li>СДИК</li>
+        <li>ТоксБерри</li>
+      </ul>
+      <a href="about.html">Подробнее о нас</a>
+      <h3>Контакты</h3>
+      <p>Вы можете забрать товар сами, заехав в наш офис.
+       Заодно, сможете проверить работоспособность покупки.
+      </p>
+      <h4>Интернет-магазин «Девайс»</h4>
+      <address>
+        <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+        <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+      </address>
+      <h4>Время работы</h4>
+      <ul>
+        <li>пн—пт: с 10:00 до 22:00</li>
+        <li>сб—вс: с 10:00 до 19:00</li>
+      </ul>
+      <a href="">Напишите нам</a>
+     </section>
+     <section>
+       <h3>Подпишитесь на рассылку</h3>
+       <p>Еженедельный дайджест с обзорами новинок,
+        длительными тест-драйвами, распаковками, а также акции,
+        спецпредложения и вот это вот всё.</p>
+         <input type="text" id="your-e-mail" name="your-e-mail" placeholder="Ваш e-mail">
+          <button class="button" type="submit">Подписаться</button>
+         <label for="your-e-mail">
+          Это бесплатно
+         </label>
+     </section>
+   </main>
+   <footer>
+     <section>
+       <h2>Контакты</h2>
+        <img src="" alt="Логотип сайта">
+         <address>
+          <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+         </address>
+         <ul>
+           <li>
+            <a href="delivery.html">Доставка</a>
+           </li>
+           <li>
+            <a href="garanty.html">Гарантия</a>
+           </li> 
+           <li>
+            <a href="contakts.html">Контакты</a>
+          </li>
+         </ul>
+         <ul>
+           <li>
+            <a class="button" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+           </li>
+           <li>
+            <a class="button" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+           </li>
+           <li>
+            <a class="button" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+           </li>
+          </ul>
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+     </section>
+   </footer>
   </body>
 </html>
