--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
      <nav>
        <ul>
           <li>
-            <a href="">Войти</a>
+            <a href="#">Войти</a>
           </li>
           <li>
-            <a href="">Сравнить</a>
+            <a href="#">Сравнить</a>
           </li>
           <li>
-            <a href="">Корзина</a>
+            <a href="#">Корзина</a>
           </li>
        </ul>
        <ul>
@@ -44,85 +44,63 @@
        <!--Н настроить переключение слайдера-->
        <h2 class="visually-hidden">Слайдер с товарами</h2>
         <img src="" alt="Изображение квадрокоптера">
-         <br>
           <strong>Порхает как бабочка, жалит как пчела!</strong>
            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a href="catalog.html/categories/quadcopters">Подробнее</a>
-         <dl>
-           <dd>800 м</dd>
-           <dt>Дальность полета</dt>
-           <dd>50 м</dd>
-           <dt>Радиус поражения</dt>
-         </dl>
+           <p>800 м</p>
+           <p>Дальность полета</p>
+           <p>50 м</p>
+           <p>Радиус поражения</p>
         <img src="" alt="Изображение фитнес-браслета">
-         <br>
           <strong>Худеем правильно!</strong>
            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a href="catalog.html/categories/fitness">Подробнее</a>
-          <dl>
-           <dd>48 часов</dd>
-           <dt>Без подзарядки</dt>
-          </dl>
+           <p>48 часов</p>
+           <p>Без подзарядки</p>
         <img src="" alt="Изображение селфи-палки">
-         <br>
           <strong>Делай селфи, как Бен Стиллер! </strong>
            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
             <a href="catalog.html/categories/monopods">Подробнее</a>
-          <dl>
-           <dd>8,5 м</dd>
-           <dt>Длина палки</dt>
-           <dd>5 кг</dd>
-           <dt>Вес палки</dt>
-           <dd>Карбон</dd>
-           <dt>Материал</dt>
-          </dl>
+           <p>8,5 м</p>
+           <p>Длина палки</p>
+           <p>5 кг</p>
+           <p>Вес палки</p>
+           <p>Карбон</p>
+           <p>Материал</p>
      </section>
      <section>
        <h2 class="visually-hidden">Категории товаров</h2>
        <ul>
+         <li>
            <img src="" alt="Изображение для категории Вируальная реальность">
-          <p>
-            <li>
-              <a href="catalog.html/categories/virtual-reality">Виртуальная реальность</a>
-            </li>
-          </p>
+           <a href="catalog.html/categories/virtual-reality">Виртуальная реальность</a>
+         </li>
+         <li>
            <img src="" alt="Изображение для категории Моноподы для селфи">
-          <p>
-            <li>
-              <a href="catalog.html/categories.html/monopods">Моноподы</a>
-            </li>
-          </p>
+           <a href="catalog.html/categories.html/monopods">Моноподы</a>
+         </li>
+         <li>
            <img src="" alt="Изображение для категории Экшн-камеры">
-          <p>
-            <li>
-              <a href="catalog.html/categories.html/e-cameras">"Экшн-камеры"</a>
-            </li>
-          </p>
+           <a href="catalog.html/categories.html/e-cameras">"Экшн-камеры"</a>
+         </li>
+         <li>
            <img src="" alt="Изображение для категории Фитнес-браслеты">
-          <p>
-           <li>
-              <a href="catalog.html/categories.html/fitness">Фитнес-браслеты</a>
-           </li>
-          </p>
+           <a href="catalog.html/categories.html/fitness">Фитнес-браслеты</a>
+         </li>
+         <li>
            <img src="" alt="Изображение для категории Умные часы">
-          <p>
-            <li>
-              <a href="catalog.html/categories.html/smart-watch">Умные часы</a>
-            </li>
-          </p>
+           <a href="catalog.html/categories.html/smart-watch">Умные часы</a>
+         </li>
+         <li>
            <img src="" alt="Изображение для категории Квадрокоптеры">
-          <p>
-            <li>
-              <a href="catalog.html/categories.html/quadcopters">Квадрокоптеры</a>
-           </li>
-          </p>
+           <a href="catalog.html/categories.html/quadcopters">Квадрокоптеры</a>
+         </li>
        </ul>
      </section>
      <section>
        <!--Слева меню должно переключаться-->
        <h2 class="visually-hidden">Наши преимущества</h2>
           <ul>
-              <img src="" alt="Изображение для Доставка">
             <li>
               <h3>Доставка</h3>
                <p>Мы с удовольствием доставим ваш товар прямо
@@ -130,16 +108,14 @@
                 мы неплохо заработаем, поднимая его на ваш этаж.
                </p>
             </li>
-              <img src="" alt="Изображение для Гарантия">
-              <li>
+            <li>
                <h3>Гарантия</h3>
                 <p>Если из-за возгорания купленного у нас товара у вас
                  сгорит дом — не переживайте, мы выдадим вам новый.
                  Товар, не дом, конечно же.
                 </p>
             </li>
-              <img src="" alt="Изображение для Кредит">
-              <li>
+            <li>
                <h3>Кредит</h3>
                 <p>Залезть в долговую яму стало проще! Кредитные 
                  консультанты подберут для вас наиболее выгодные
@@ -150,46 +126,48 @@
      </section>
      <section>
       <h2 class="visually-hidden">Полезная информация</h2>
-       <a href="delivery.html">Доставим редкий товар под заказ</a>
-      <h3>О нас</h3>
-      <p>Огромный выбор гаджетов не оставит равнодушным гика, 
-       который есть в каждом из нас.
-      </p>
-      <p>Мы можем доставить ваш товар в самые отдалённые уголки 
-       России транспортными компаниями:
-      </p>
-      <ul>
-        <li>Меловые линии</li>
-        <li>СДИК</li>
-        <li>ТоксБерри</li>
-      </ul>
-      <a href="about.html">Подробнее о нас</a>
-      <h3>Контакты</h3>
-      <p>Вы можете забрать товар сами, заехав в наш офис.
-       Заодно, сможете проверить работоспособность покупки.
-      </p>
-      <h4>Интернет-магазин «Девайс»</h4>
-      <address>
-        <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-        <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
-      </address>
-      <h4>Время работы</h4>
-      <ul>
-        <li>пн—пт: с 10:00 до 22:00</li>
-        <li>сб—вс: с 10:00 до 19:00</li>
-      </ul>
-      <a href="">Напишите нам</a>
+        <a href="delivery.html">Доставим редкий товар под заказ</a>
      </section>
      <section>
-       <h3>Подпишитесь на рассылку</h3>
-       <p>Еженедельный дайджест с обзорами новинок,
+       <h3>О нас</h3>
+         <p>Огромный выбор гаджетов не оставит равнодушным гика, 
+         который есть в каждом из нас.
+         </p>
+         <p>Мы можем доставить ваш товар в самые отдалённые уголки 
+         России транспортными компаниями:
+         </p>
+       <ul>
+         <li>Меловые линии</li>
+         <li>СДИК</li>
+         <li>ТоксБерри</li>
+      </ul>
+         <a href="about.html">Подробнее о нас</a>
+      <h3>Контакты</h3>
+        <p>Вы можете забрать товар сами, заехав в наш офис.
+        Заодно, сможете проверить работоспособность покупки.
+        </p>
+         <h4>Интернет-магазин «Девайс»</h4>
+           <address>
+             <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+             <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+           </address>
+         <h4>Время работы</h4>
+           <ul>
+            <li>пн—пт: с 10:00 до 22:00</li>
+            <li>сб—вс: с 10:00 до 19:00</li>
+           </ul>
+         <a href="#">Напишите нам</a>
+     </section>
+     <section>
+      <h3>Подпишитесь на рассылку</h3>
+        <p>Еженедельный дайджест с обзорами новинок,
         длительными тест-драйвами, распаковками, а также акции,
         спецпредложения и вот это вот всё.</p>
-         <input type="text" id="your-e-mail" name="your-e-mail" placeholder="Ваш e-mail">
+       <form>
+         <input type="email" name="your-e-mail" placeholder="Ваш e-mail">
           <button class="button" type="submit">Подписаться</button>
-         <label for="your-e-mail">
-          Это бесплатно
-         </label>
+         <p>Это бесплатно</p>
+       </form>
      </section>
    </main>
    <footer>
