Добавил для секций заголовки

--- a/catalog.html
+++ b/catalog.html
@@ -131,6 +131,7 @@
         </section>
 
         <section>
+            <h2>Карточка товаров</h2>
             <form>
                 <label for="sorting">Сортировка</label>
                 <select id="sorting" name="sorting">
@@ -170,10 +171,11 @@
                     <p>4900 ₽</p>
                 </li>
             </ul>
-            <button type="button">Загурзить еще</button>
+            <button type="button">Загрузить еще</button>
         </section>
 
         <section>
+            <h2>Навигация</h2>
             <ul>
                 <li>
                     <a>
