--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
          </li>
          <li>
            <img src="" alt="Изображение для категории Моноподы для селфи">
-           <a href="catalog.html/categories.html/monopods">Моноподы</a>
+           <a href="catalog.html/categories/monopods">Моноподы</a>
          </li>
          <li>
            <img src="" alt="Изображение для категории Экшн-камеры">
-           <a href="catalog.html/categories.html/e-cameras">"Экшн-камеры"</a>
+           <a href="catalog.html/categories/e-cameras">"Экшн-камеры"</a>
          </li>
          <li>
            <img src="" alt="Изображение для категории Фитнес-браслеты">
-           <a href="catalog.html/categories.html/fitness">Фитнес-браслеты</a>
+           <a href="catalog.html/categories/fitness">Фитнес-браслеты</a>
          </li>
          <li>
            <img src="" alt="Изображение для категории Умные часы">
-           <a href="catalog.html/categories.html/smart-watch">Умные часы</a>
+           <a href="catalog.html/categories/smart-watch">Умные часы</a>
          </li>
          <li>
            <img src="" alt="Изображение для категории Квадрокоптеры">
-           <a href="catalog.html/categories.html/quadcopters">Квадрокоптеры</a>
+           <a href="catalog.html/categories/quadcopters">Квадрокоптеры</a>
          </li>
        </ul>
      </section>
@@ -176,7 +176,7 @@
         <img src="" alt="Логотип сайта">
          <address>
           <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-          <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+          <a href="tel:+78128121212">+7 (812) 812-12-12</a>
          </address>
          <ul>
            <li>
