--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
          <h4>Интернет-магазин «Девайс»</h4>
            <address>
              <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-             <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+             <a href="tel:+78128121212">+7 (812) 812-12-12</a>
            </address>
          <h4>Время работы</h4>
            <ul>
