--- a/catalog.html
+++ b/catalog.html
@@ -212,7 +212,7 @@
            <img src="" alt="Логотип сайта">
             <address>
              <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-             <a href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+             <a href="tel:+78128121212">+7 (812) 812-12-12</a>
             </address>
             <ul>
               <li>
