--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
     <header>
-       <img src="" alt="Логотип сайта">
+       <img src="image/logo.svg" alt="Логотип сайта" width="145" height="36">
      <nav>
        <ul>
           <li>
@@ -43,24 +44,27 @@
      <section>
        <!--Н настроить переключение слайдера-->
        <h2 class="visually-hidden">Слайдер с товарами</h2>
-        <img src="" alt="Изображение квадрокоптера">
+        <img src="image/slider/slider-1.png" alt="Изображение квадрокоптера" width="560" height="560">
           <strong>Порхает как бабочка, жалит как пчела!</strong>
            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a href="catalog.html/categories/quadcopters">Подробнее</a>
+            <!--Переделать под таблицу-->
            <p>800 м</p>
            <p>Дальность полета</p>
            <p>50 м</p>
            <p>Радиус поражения</p>
-        <img src="" alt="Изображение фитнес-браслета">
+        <img src="image/slider/slider-2.png" alt="Изображение фитнес-браслета" width="560" height="560">
           <strong>Худеем правильно!</strong>
            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a href="catalog.html/categories/fitness">Подробнее</a>
+            <!--Переделать под таблицу-->
            <p>48 часов</p>
            <p>Без подзарядки</p>
-        <img src="" alt="Изображение селфи-палки">
+        <img src="image/slider/slider-3.png" alt="Изображение селфи-палки" width="560" height="560">
           <strong>Делай селфи, как Бен Стиллер! </strong>
            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
             <a href="catalog.html/categories/monopods">Подробнее</a>
+          <!--Переделать под таблицу-->
            <p>8,5 м</p>
            <p>Длина палки</p>
            <p>5 кг</p>
@@ -72,27 +76,27 @@
        <h2 class="visually-hidden">Категории товаров</h2>
        <ul>
          <li>
-           <img src="" alt="Изображение для категории Вируальная реальность">
+           <img src="image/categories/virtual.svg" alt="Изображение для категории Вируальная реальность" width="97" height="55">
            <a href="catalog.html/categories/virtual-reality">Виртуальная реальность</a>
          </li>
          <li>
-           <img src="" alt="Изображение для категории Моноподы для селфи">
+           <img src="image/categories/monopods.svg" alt="Изображение для категории Моноподы для селфи" width="86" height="117">
            <a href="catalog.html/categories/monopods">Моноподы</a>
          </li>
          <li>
-           <img src="" alt="Изображение для категории Экшн-камеры">
+           <img src="image/categories/action-camera.svg" alt="Изображение для категории Экшн-камеры" width="71" height="87">
            <a href="catalog.html/categories/e-cameras">"Экшн-камеры"</a>
          </li>
          <li>
-           <img src="" alt="Изображение для категории Фитнес-браслеты">
+           <img src="image/categories/fitness-bracelets.svg" alt="Изображение для категории Фитнес-браслеты" width="107" height="65">
            <a href="catalog.html/categories/fitness">Фитнес-браслеты</a>
          </li>
          <li>
-           <img src="" alt="Изображение для категории Умные часы">
+           <img src="image/categories/smart-watch.svg" alt="Изображение для категории Умные часы" width="56" height="98">
            <a href="catalog.html/categories/smart-watch">Умные часы</a>
          </li>
          <li>
-           <img src="" alt="Изображение для категории Квадрокоптеры">
+           <img src="image/categories/quadrocopters.svg" alt="Изображение для категории Квадрокоптеры" width="132" height="69">
            <a href="catalog.html/categories/quadcopters">Квадрокоптеры</a>
          </li>
        </ul>
@@ -107,6 +111,7 @@
                 к вашему подъезду совершенно бесплатно! Ведь
                 мы неплохо заработаем, поднимая его на ваш этаж.
                </p>
+               <img src="image/advantage/delivery.svg" alt="Мы с удовольствием доставим ваш товар" width="136" height="164">
             </li>
             <li>
                <h3>Гарантия</h3>
@@ -114,6 +119,7 @@
                  сгорит дом — не переживайте, мы выдадим вам новый.
                  Товар, не дом, конечно же.
                 </p>
+                <img src="image/advantage/garanty.svg" alt="Гарантия выдадим новый товар" width="171" height="195">
             </li>
             <li>
                <h3>Кредит</h3>
@@ -121,6 +127,7 @@
                  консультанты подберут для вас наиболее выгодные
                  условия кредита. Выгодные для банка, разумеется.
                 </p>
+                <img src="image/advantage/credit.svg" alt="Выгодные условия кредита" width="156" height="188">
             </li>
            </ul>
      </section>
@@ -173,7 +180,7 @@
    <footer>
      <section>
        <h2>Контакты</h2>
-        <img src="" alt="Логотип сайта">
+        <img src="image/logo-footer.svg" alt="Логотип сайта" width="145" height="36">
          <address>
           <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           <a href="tel:+78128121212">+7 (812) 812-12-12</a>
