--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-       <img src="" alt="Логотип сайта">
+       <img src="image/logo.svg" alt="Логотип сайта" width="145" height="36">
      <nav>
        <ul>
           <li>
@@ -145,28 +145,28 @@
             <ul>
                 <li>
                  <a href="product.html">
-                    <img src="" alt="Любительская селфи палка">
+                    <img src="image/catalog/product-1.jpg" alt="Любительская селфи палка" width="360" height="380">
                     <h3>Любительская селфи-палка</h3>
                  </a>
                     <p>500 ₽</p>
                 </li>
                 <li>
                  <a href="product.html">
-                    <img src="" alt="Профессиональная селфи-палка">
+                    <img src="image/catalog/product-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
                     <h3>Профессиональная селфи-палка</h3>
                  </a>
                     <p>1500 ₽</p>
                 </li>
                 <li>
                  <a href="product.html">
-                    <img src="" alt="Непотопляемая селфи-палка">
+                    <img src="image/catalog/product-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
                     <h3>Непотопляемая селфи-палка</h3>
                  </a>
                     <p>2500 ₽</p>
                 </li>
                 <li>
                  <a href="product.html">
-                    <img src="" alt="Селфи-палка Следуй за мной">
+                    <img src="image/catalog/product-4.jpg" alt="Селфи-палка Следуй за мной" width="360" height="380">
                     <h3>Селфи-палка «Следуй за мной»</h3>
                  </a>
                     <p>4900 ₽</p>
@@ -210,7 +210,7 @@
     <footer>
         <section>
           <h2>Контакты</h2>
-           <img src="" alt="Логотип сайта">
+           <img src="image/logo-footer.svg" alt="Логотип сайта" width="145" height="36">
             <address>
              <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
              <a href="tel:+78128121212">+7 (812) 812-12-12</a>
